name:                mdslide
version:             0.1.0.0
synopsis:            Markdown Slide Generator
description:         Markdown Slide Generator
homepage:            https://github.com/yulii/mdslide
bug-reports:         https://github.com/yulii/mdslide/issues
license:             MIT
license-file:        LICENSE
author:              yulii
maintainer:          yuliinfo@gmail.com

-- A copyright notice.
-- copyright:           

category:            Web
build-type:          Simple
cabal-version:       >=1.8

--Flag library-only
--    Description:   Build for use with "mdslide server"
--    Default:       False

library
  build-depends:     base       == 4.6.*
  
executable           mdslide
--    if flag(library-only)
--        Buildable: False

    main-is:         main.hs
    hs-source-dirs:  src
    build-depends:   base
                 ,   http-types
                 ,   warp
                 ,   wai
                 ,   mdslide

    -- ghc-options:       -threaded -O2

source-repository    head
  type:              git
  location:          git://github.com/yulii/mdslide.git

