name:                mdslide
version:             0.1.0.0
synopsis:            Markdown Slide Generator
description:         Markdown Slide Generator
homepage:            https://github.com/yulii/mdslide
bug-reports:         https://github.com/yulii/mdslide/issues
license:             MIT
license-file:        LICENSE
author:              yulii
maintainer:          Ryo Yoneyama <yuliinfo@gmail.com>

-- A copyright notice.
-- copyright:           

category:            Web
build-type:          Simple
cabal-version:       >=1.8

data-dir:            static

--Flag library-only
--    Description:   Build for use with "mdslide server"
--    Default:       False

library
  build-depends:     base              == 4.6.*
               ,     pandoc            >= 1.13     && < 1.14
               ,     regex-compat-tdfa >= 0.95.1.4 && < 0.96
  
executable           mdslide
--    if flag(library-only)
--        Buildable: False

  main-is:           main.hs
  hs-source-dirs:    src
  build-depends:     base
               ,     blaze-builder
               ,     blaze-html
               ,     bytestring
               ,     pandoc
               ,     regex-compat-tdfa
               ,     http-types
               ,     text
               ,     warp
               ,     wai
               ,     mdslide

    -- ghc-options:       -threaded -O2

test-suite spec
  type:              exitcode-stdio-1.0
  hs-source-dirs:    src, test
  main-is:           spec.hs
  ghc-options:       -Wall
  build-depends:     base        == 4.6.*
               ,     hspec       >= 1.11.4
               ,     QuickCheck

source-repository    head
  type:              git
  location:          git://github.com/yulii/mdslide.git

